--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,1 +1,1 @@
-﻿<iframe class="code-pen-iframe" src="https://codepen.io/deadlocked247/pen/YQgjMJ"></iframe>
+﻿<h2>This will be the dashboard (List of latest posts / comments)</h2>
