--- a/sources/in-house/_codepen.scss
+++ b/sources/in-house/_codepen.scss
@@ -1,5 +1,9 @@
-.code-pen-iframe {
+.codepen-iframe {
   width: 100%;
   height: 100%;
   border: none;
+}
+
+.codepen-fullscreen {
+    display: none;
 }
