--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+    <title><%= title %></title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -96,7 +96,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery-3.2.1.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
-    <script src="/js/CodePen.js"></script>
+    <script src="/js/Codepen.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
