Added validation into singup page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -96,6 +96,8 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery-3.2.1.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
+    <script src="/js/dependencies/customeValidator.js"></script>
+    <script src="/js/dependencies/jquery.validate.min.js"></script>
     <script src="/js/CodePen.js"></script>
     <!--SCRIPTS END-->
   </body>
