--- a/views/User/new.ejs
+++ b/views/User/new.ejs
@@ -6,7 +6,7 @@
         <div id="middle" style="width:30%;">
             <h1>Sign Up Page</h1>
             <div style="width:100%;">
-                <form method="POST" action="/User/create">    
+                <form method="POST" action="/User/create" class="signup">    
                     <div style="display:flex; flex-direction:column;justify-content:space-between;height:auto;">
                         <input type="text" placeholder="User Name" name="name" />
                         <input type="text" placeholder="Title" name="title" />
