Insert Comment to files involved

--- a/views/User/new.ejs
+++ b/views/User/new.ejs
@@ -14,10 +14,16 @@
                         <input type="password" placeholder="Password" name="password" />
                         <input type="password" placeholder="Confirm Password" name="confirmation" />
                         <input type="submit" value="Sign Up" />
+                        <!-- Brian 20170730 - Start -->
+                        <!-- csrf: Cross Site Request Forgery, Reason:under research -->
+                        <!-- Brian End -->
                         <input type="hidden" name="_csrf" value="<%= _csrf %>" />
                     </div>
                 </form>
             </div>
+            <!--Brian 20170730 - Start -->
+            <!-- Code below is to display Flash Error Message to client is Json type string. -->
+            <!-- Brian End -->
                 <% if(flash && flash.err){ %>
             <ul>
                     <% Object.keys(flash.err).forEach(function(error) {%>
