--- a/sources/scss/app.scss
+++ b/sources/scss/app.scss
@@ -47,15 +47,14 @@
 =            4th.Layout Styles                =
 =============================================*/
 @import
-  "layout/chatbox",
-  "layout/chatroom",
-  "layout/comment",
-  "layout/forms",
-  "layout/header",
-  "layout/navigation",
-  "layout/post",
-  "layout/sidebar",
-  "layout/thread";
+  "layouts/chatbox",
+  "layouts/chatroom",
+  "layouts/comment",
+  "layouts/forms",
+  "layouts/header",
+  "layouts/post",
+  "layouts/sidebar",
+  "layouts/thread";
 /*=====     End of Layout Styles       ======*/
 
 /*=============================================
