--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -96,8 +96,11 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/jquery-3.2.1.min.js"></script>
+    <script src="/js/dependencies/tether.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
-    <script src="/js/CodePen.js"></script>
+    <script src="/js/dependencies/customeValidator.js"></script>
+    <script src="/js/dependencies/jquery.validate.min.js"></script>
+    <script src="/js/shared.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
