--- a/views/Work/work.ejs
+++ b/views/Work/work.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+﻿<div class="container-fluid">
     <!--Editors-->
     <div class="row">
         <div class="col-lg-4 work-html">
@@ -37,11 +37,11 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-sm btn-primary">Save</button>
                 </div>
             </div>
         </div>
