--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -99,6 +99,7 @@
     <script src="/js/dependencies/tether.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
     <script src="/js/dependencies/customeValidator.js"></script>
+    <script src="/js/dependencies/CustomValidator.js"></script>
     <script src="/js/dependencies/jquery.validate.min.js"></script>
     <script src="/js/shared.js"></script>
     <!--SCRIPTS END-->
