--- a/views/User/new.ejs
+++ b/views/User/new.ejs
@@ -8,11 +8,11 @@
             <div style="width:100%;">
                 <form method="POST" action="/User/create" class="signup">    
                     <div style="display:flex; flex-direction:column;justify-content:space-between;height:auto;">
-                        <input type="text" placeholder="User Name" name="name" />
-                        <input type="text" placeholder="Title" name="title" />
-                        <input type="text" placeholder="Email" name="email"/>
-                        <input type="password" placeholder="Password" name="password" />
-                        <input type="password" placeholder="Confirm Password" name="confirmation" />
+                        <input type="text" placeholder="User Name" style="color:black" name="name" />
+                        <input type="text" placeholder="Title" style="color:black" name="title" />
+                        <input type="text" placeholder="Email" style="color:black" name="email"/>
+                        <input type="password" placeholder="Password" style="color:black" name="password" />
+                        <input type="password" placeholder="Confirm Password" style="color:black" name="confirmation" />
                         <input type="submit" value="Sign Up" />
                         <!-- Brian 20170730 - Start -->
                         <!-- csrf: Cross Site Request Forgery, Reason:under research -->
