- Restructured some scss code - Added login modal

--- a/sources/scss/app.scss
+++ b/sources/scss/app.scss
@@ -61,6 +61,8 @@
 =            5th.Component Styles             =
 =============================================*/
 @import
+  "components/modal",
+  "components/icons",
   "components/buttons",
   "components/dropdown",
   "components/navbar",
