--- a/sources/scss/components/_buttons.scss
+++ b/sources/scss/components/_buttons.scss
@@ -1,3 +1,10 @@
-button {
-  cursor: pointer
+.btn {
+  cursor: pointer;
+  .btn-primary {
+
+  }
+
+  .btn-secondary {
+    border: 1px solid $color-primary;
+  }
 }
