--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -18,18 +18,12 @@
         <a class="nav-link" href="#"><span>Projects</span></a>
       </li>
     </ul>
-    <form role="search" class="form-inline my-2 my-lg-0">
-      <div class="form-item align-middle">
-        <input class="form-control pt-2 pr-2 pb-0 pl-0" role="search" type="text" placeholder="Search">
-      </div>
-      <div class="form-item">
-        <button class="btn btn-outline-success my-2 my-sm-0 p-2" role="search" type="submit">
-          <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" fill="#000000" height="20" viewBox="0 0 24 24" width="20">
-            <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-            <path d="M0 0h24v24H0z" fill="none"/>
-          </svg>
-        </button>
-      </div>
-    </form>
+    <button type="button" class="btn btn-secondary align-self-center" data-toggle="modal" data-target="#login">
+      <svg class="icon small" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+        <path d="M0 0h48v48h-48z" fill="none"/>
+        <path d="M42 6.02h-36c-2.21 0-4 1.79-4 4v7.98h4v-8.02h36v28.06h-36v-8.04h-4v8.02c0 2.21 1.79 3.96 4 3.96h36c2.21 0 4-1.76 4-3.96v-28c0-2.21-1.79-4-4-4zm-20 25.98l8-8-8-8v6h-20v4h20v6z"/>
+      </svg>
+      <span class="small">Login</span>
+    </button>
   </div>
 </nav>
