--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -35,6 +35,7 @@
 
   <body>
     <%- partial('../components/navbar.ejs') %>
+    <%- partial('../components/login-modal.ejs') %>
     <%- body %>
 
 
@@ -61,7 +62,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
