--- a/views/User/index.ejs
+++ b/views/User/index.ejs
@@ -18,7 +18,13 @@
             <td><%= user.email %></td>
             <td><a class="btn btn-sm btn-primary" href="/user/show/<%= user.id %>">Show</a></td>
             <td><a class="btn btn-sm btn-primary" href="/user/edit/<%= user.id %>">Edit</a></td>
-            <td><a class="btn btn-sm btn-primary" href="/user/destroy/<%= user.id %>">Delete</a></td>
+            <td>
+                <form method="POST" action="/user/destroy/<%= user.id %>">
+                    <input type="hidden" name="_method"  value="delete" />
+                    <input type="submit" class="btn btn-sm btn-danger" value="Delete" />
+                    <input type="hidden" name=" _csrf" value="<%= _csrf %>"/>
+                </form>
+            </td>
         </tr>
         <% }) %>
     </table>
