--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,9 +34,11 @@
     <script src="/js/dependencies/jquery-3.2.1.min.js"></script>
     <script src="/js/dependencies/tether.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
-    <script src="/js/dependencies/CustomValidator.js"></script>
     <script src="/js/dependencies/jquery.validate.min.js"></script>
-    <script src="/js/shared.js"></script>
+    <script src="/js/inhouse/Shared.js"></script>
+    <script src="/js/inhouse/CustomValidator.js"></script>
+    <script src="/js/inhouse/Account.js"></script>
+    <script src="/js/inhouse/EventBinder.js"></script>
     <!--SCRIPTS END-->
 
     <!--Additional scripts-->
