--- a/sources/scss/components/_modal.scss
+++ b/sources/scss/components/_modal.scss
@@ -2,4 +2,11 @@
   .modal-title {
     text-transform: uppercase;
   }
+  a {
+    color: $disabled-text-color-primary;
+    text-decoration: none;
+    &:hover {
+      color: darken($disabled-text-color-primary, 20%);
+    }
+  }
 }
