--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -34,11 +34,10 @@
   </head>
 
   <body>
-    <%- partial('../components/navbar.ejs') %>
-    <%- partial('../components/login-modal.ejs') %>
+    <header>
+    <%- partial('../components/header.ejs') %>
+    </header>
     <%- body %>
-
-
 
     <!--
         Client-side Templates
@@ -99,9 +98,11 @@
     <script src="/js/dependencies/jquery-3.2.1.min.js"></script>
     <script src="/js/dependencies/tether.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
-    <script src="/js/dependencies/CustomValidator.js"></script>
     <script src="/js/dependencies/jquery.validate.min.js"></script>
-    <script src="/js/shared.js"></script>
+    <script src="/js/inhouse/Shared.js"></script>
+    <script src="/js/inhouse/CustomValidator.js"></script>
+    <script src="/js/inhouse/Account.js"></script>
+    <script src="/js/inhouse/EventBinder.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
