name to displayName

--- a/views/User/edit.ejs
+++ b/views/User/edit.ejs
@@ -2,7 +2,7 @@
     <h2>
         Hey, you're editing a user...
     </h2>
-    <input type="text" class="form-control" name="name" value="<%= user.name %>" />
+    <input type="text" class="form-control" name="name" value="<%= user.displayName %>" />
     <input type="text" class="form-control" name="title" value="<%= user.title %>" />
     <input type="text" class="form-control" name="email" value="<%= user.email%>" />
     <input type="submit" class="btn btn-lg btn-primary btn-block" />
