--- a/views/User/show.ejs
+++ b/views/User/show.ejs
@@ -1,6 +1,6 @@
 <div class='container'>
     <h1>
-        <%= user.name %>
+        <%= user.displayName %>
     </h1>
     <h3>    
         <%= user.title %>
