--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -94,7 +94,7 @@
 <!--END: LOGIN MODAL BOX-->
 
 <!--START: SIGN UP MODAL BOX-->
-<div class="modal" id="sign-up" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+<div class="modal" id="sign-up" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
