--- a/sources/scss/utils/_variables.scss
+++ b/sources/scss/utils/_variables.scss
@@ -1,7 +1,8 @@
-$grey-dark : #212121;
+﻿$grey-dark : #212121;
 $grey : #BDBDBD;
 $grey-white : #FAFAFA;
 $white : #FFFFFF;
 $light-cyan : #26C6DA;
 
 $nav-tabs-active-link-hover-color: $grey-white;
+$nav-tabs-active-link-hover-bg: $light-cyan;
