--- a/views/Work/work.ejs
+++ b/views/Work/work.ejs
@@ -1,49 +1,54 @@
 ﻿<div class="container-fluid">
-    <!--Editors-->
-    <div class="row">
-        <div class="col-lg-4 work-html">
-            <h5>HTML</h5>
-        </div>
-        <div class="col-lg-4 work-css">
-            <h5>CSS</h5>
-        </div>
-        <div class="col-lg-4 work-js">
-            <h5>JS </h5>
-        </div>
+  <!--Editors-->
+  <div class="row">
+    <div class="col-lg-4 work-html">
+      <h5>HTML</h5>
     </div>
+    <div class="col-lg-4 work-css">
+      <h5>CSS</h5>
+    </div>
+    <div class="col-lg-4 work-js">
+      <h5>JavaScript</h5>
+    </div>
+  </div>
 
-    <!--Output-->
-    <div class="row">
-        <div class="col-lg-12">
-            <iframe class="work-output"></iframe>
-        </div>
+  <!--Output-->
+  <div class="row">
+    <div class="col-lg-12">
+      <iframe class="work-output"></iframe>
     </div>
+  </div>
 
-    <!--Menu-->
-    <div class="btn-group btn-group-sm fixed-top work-menu">
-        <button type="button" class="btn btn-primary work-menu-run">Run</button>
-        <button type="button" class="btn btn-primary work-menu-tidy">Tidy</button>
-        <button type="button" class="btn btn-primary work-menu-settings" data-toggle="modal" data-target="#work-menu-settings-modal">Settings</button>
-    </div>
+  <!--Menu-->
+  <div class="btn-group btn-group-sm fixed-top work-menu">
+    <button type="button" class="btn btn-primary work-menu-run">Run</button>
+    <button type="button" class="btn btn-primary work-menu-tidy">Tidy</button>
+    <button type="button" class="btn btn-primary work-menu-settings" data-toggle="modal" data-target="#work-menu-settings-modal">Settings</button>
+  </div>
 
-    <!--Settings-->
-    <div class="modal fade work-menu-settings-modal" id="work-menu-settings-modal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Settings</h5>
-                    <button type="button" class="close" data-dismiss="modal">
-                        <span>&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-sm btn-primary">Save</button>
-                </div>
-            </div>
+  <!--Settings-->
+  <div class="modal work-menu-settings-modal" id="work-menu-settings-modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#js-setting">JavaScript</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#css-setting">CSS</a>
+            </li>
+          </ul>
         </div>
+        <div class="modal-body">
+          
+          <!--<input type="text" class="form-control" placeholder="Link to JS file..." />-->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
