--- a/sources/scss/utils/_variables.scss
+++ b/sources/scss/utils/_variables.scss
@@ -16,9 +16,9 @@ $alert-color-primary         : $red;
 
 // Bootstrap variable override
 $nav-tabs-active-link-hover-color : $bg-color-primary;
-$brand-primary                    : $grey-white;
+/*$brand-primary                    : $grey-white;
 $btn-secondary-border             : $color-primary;
-$btn-secondary-bg                 : $bg-color-primary;
+$btn-secondary-bg                 : $bg-color-primary;*/
 
 $prefixes : (
   webkit : "-webkit-",
