--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable navbar-light bg-primary pt-0 pb-0">
+<nav class="navbar navbar-toggleable navbar-light pt-0 pb-0">
   <div class="d-flex">
     <button class="navbar-toggler navbar-toggler-left align-self-center" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
