--- a/sources/scss/components/_navbar.scss
+++ b/sources/scss/components/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+  background-color: $bg-color-primary !important;
   @include set-prefix("box-shadow", "0px 1px 15px -1px #{$shadow-color-primary}");
   #navbar-content {
     align-self: stretch;
