--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,9 @@
   </head>
 
   <body>
+    <header>
+    <%- partial('components/header.ejs') %>
+    </header>
     <%- body %>
 
     <!--TEMPLATES-->
