--- a/sources/scss/utils/_variables.scss
+++ b/sources/scss/utils/_variables.scss
@@ -1,4 +1,4 @@
-$dark       : #212121;
+﻿$dark       : #212121;
 $grey       : #BDBDBD;
 $grey-white : #FAFAFA;
 $white      : #FFFFFF;
@@ -16,8 +16,6 @@ $alert-color-primary         : $red;
 
 // Bootstrap variable override
 $nav-tabs-active-link-hover-color : $bg-color-primary;
-$btn-secondary-border             : $color-primary;
-$btn-secondary-bg                 : $bg-color-primary;
 
 $prefixes : (
   webkit : "-webkit-",
