Temporary fixed the problems pointed out by Danny, so that the future working progress will be better I THINK lol

--- a/sources/scss/components/_buttons.scss
+++ b/sources/scss/components/_buttons.scss
@@ -2,6 +2,6 @@
   cursor: pointer;
 
   .btn-secondary {
-    border: 1px solid $color-primary;
+    border: 1px solid $btn-secondary-border;
   }
 }
