--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -7,9 +7,9 @@
   </div>
 
   <div class="collapse navbar-collapse" id="navbar-content">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"><span>Home</span></a>
+    <ul class="nav nav-pills mr-auto">
+      <li class="nav-item">
+        <a class="nav-link active" href="#"><span>Home</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"><span>Threads</span></a>
