--- a/sources/scss/views/_work.scss
+++ b/sources/scss/views/_work.scss
@@ -6,13 +6,10 @@
 
 .work-menu {
   left: initial; /*position to right*/
+  right: $grid-gutter-width-base / 2;
   opacity: .4;
 }
 
 .work-menu:hover {
   opacity: 1;
-}
-
-.work-menu-settings-modal .modal-header {
-  padding: 0;
 }
