--- a/views/User/edit.ejs
+++ b/views/User/edit.ejs
@@ -1,4 +1,4 @@
-<form action="/user/update/<%= user.id %>" method="POST" class="signup">
+﻿<form action="/user/update/<%= user.id %>" method="POST" class="signup">
     <h2>
         Hey, you're editing a user...
     </h2>
@@ -6,5 +6,4 @@
     <input type="text" class="form-control" name="title" value="<%= user.title %>" />
     <input type="text" class="form-control" name="email" value="<%= user.email%>" />
     <input type="submit" class="btn btn-lg btn-primary btn-block" />
-    <input type="hidden" name="_csrf" value="<%= _csrf %>" />
 </form>
