--- a/views/Work/index.ejs
+++ b/views/Work/index.ejs
@@ -22,11 +22,11 @@
 <div class="btn-group btn-group-sm fixed-top work-menu">
   <button type="button" class="btn btn-primary work-menu-run">Run</button>
   <button type="button" class="btn btn-primary work-menu-tidy">Tidy</button>
-  <button type="button" class="btn btn-primary work-menu-settings" data-toggle="modal" data-target="#work-menu-settings-modal">Settings</button>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".work-settings-modal">Settings</button>
 </div>
 
 <!--Settings Modal-->
-<div class="modal work-menu-settings-modal" id="work-menu-settings-modal" tabindex="-1">
+<div class="modal work-settings-modal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -36,7 +36,10 @@
         </button>
       </div>
       <div class="modal-body">
-        
+        <button type="button" class="btn btn-primary work-settings-modal-save-work">Save work</button>
+        <form action="/work/save" method="post">
+          <button class="btn btn-primary">Save work</button>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
