--- a/views/Work/index.ejs
+++ b/views/Work/index.ejs
@@ -20,8 +20,8 @@
 
 <!--Menu-->
 <div class="btn-group btn-group-sm fixed-top work-menu">
-  <button type="button" class="btn btn-primary work-menu-run">Run</button>
-  <button type="button" class="btn btn-primary work-menu-tidy">Tidy</button>
+  <button type="button" class="btn btn-primary work-run">Run</button>
+  <button type="button" class="btn btn-primary work-tidy">Tidy</button>
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".work-settings-modal">Settings</button>
 </div>
 
@@ -36,7 +36,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <button type="button" class="btn btn-primary work-settings-modal-save-work">Save work</button>
+        <button type="button" class="btn btn-primary work-save-work">Save work</button>
+        <button type="button" class="btn btn-primary work-save-template">Save as Template</button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
