--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,6 +46,7 @@
     <script src="/js/dependencies/tether.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
     <script src="/js/dependencies/jquery.validate.min.js"></script>
+    <script src="/js/dependencies/linq.min.js"></script>
     <script src="/js/inhouse/Shared.js"></script>
     <script src="/js/inhouse/CustomValidator.js"></script>
     <script src="/js/inhouse/Account.js"></script>
