--- a/views/Work/index.ejs
+++ b/views/Work/index.ejs
@@ -36,12 +36,12 @@
         </button>
       </div>
       <div class="modal-body">
-        <button type="button" class="btn btn-primary work-save-work">Save work</button>
-        <button type="button" class="btn btn-primary work-save-template">Save as Template</button>
+        <button type="button" class="btn btn-primary work-save-work" data-dismiss="modal">Save work</button>
+        <button type="button" class="btn btn-primary work-save-template" data-dismiss="modal">Save as Template</button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
       </div>
     </div>
   </div>
