--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,4 +1,4 @@
-<!--Refer to /api/services/BaseViewModel.js for common view model properties that are used in this layout-->
+﻿<!--Refer to /api/services/BaseViewModel.js for common view model properties that are used in this layout-->
 
 <!DOCTYPE html>
 <html>
