--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,12 +33,12 @@
       </header>
     <% } %>
 
-    <div class="container-fluid">
+    <main class="container-fluid">
       <%- body %>
-    </div>
+    </main>
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
     <!--LIVERELOAD CHROME PLUGIN-->
@@ -53,9 +53,11 @@
     <script src="/js/dependencies/tether.min.js"></script>
     <script src="/js/dependencies/bootstrap.min.js"></script>
     <script src="/js/dependencies/jquery.validate.min.js"></script>
+    <script src="/js/dependencies/summernote.min.js"></script>
     <script src="/js/inhouse/Shared.js"></script>
     <script src="/js/inhouse/CustomValidator.js"></script>
     <script src="/js/inhouse/Account.js"></script>
+    <script src="/js/inhouse/Thread.js"></script>
     <script src="/js/inhouse/EventBinder.js"></script>
     <!--SCRIPTS END-->
 
