--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,4 +1,4 @@
-﻿<!--Refer to /api/services/BaseViewModel.js for common view model properties that are used in this layout-->
+<!--Refer to /api/services/BaseViewModel.js for common view model properties that are used in this layout-->
 
 <!DOCTYPE html>
 <html>
@@ -48,6 +48,7 @@
     <script src="/js/dependencies/jquery.validate.min.js"></script>
     <script src="/js/dependencies/linq.min.js"></script>
     <script src="/js/inhouse/Shared.js"></script>
+    <script src="/js/inhouse/Client.js"></script>
     <script src="/js/inhouse/CustomValidator.js"></script>
     <script src="/js/inhouse/Account.js"></script>
     <script src="/js/inhouse/EventBinder.js"></script>
