--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,7 @@
     </main>
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
     <!--LIVERELOAD CHROME PLUGIN-->
@@ -51,6 +51,7 @@
     <script src="/js/inhouse/Client.js"></script>
     <script src="/js/inhouse/CustomValidator.js"></script>
     <script src="/js/inhouse/Account.js"></script>
+    <script src="/js/inhouse/Thread.js"></script>
     <script src="/js/inhouse/EventBinder.js"></script>
     <!--SCRIPTS END-->
 
